# BasicGraphicSetup

./: .gitmodules  CMakeLists.txt
.github/workflows/: c-cpp.yml
MyExec/: CMakeLists.txt
MyExec/src/: main.cpp
MyLibrary/: CMakeLists.txt
MyLibrary/src/: Person.cpp  Person.h
MyTest/: CMakeLists.txt  main.cpp
MyTest/src/: PersonTest.cpp
